infrastructure/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: tnc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: thusithanc/gke-apptest-backend@sha256:0234d3d9c9cd4606b3fd75445e6ba92d735247a41594e636a5dccc675d3dc3b5
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tnc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg-status-verbosity: "FULL"
    cloud.google.com/neg-status-uptime-checks-enable: "true"
spec:
  selector:
    app: backend
  ports:
    - appProtocol: HTTP
      port: 80
      targetPort: 8000
  type: ClusterIP
