infrastructure/manifests/lb.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: backend-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
  - name: backend-gateway
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /api/
    backendRefs:
      - name: backend-service
        port: 80
  - matches:
      - path:
          value: /
    backendRefs:
      - name: streamlit-ui-service
        port: 80
